--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -83,8 +83,9 @@ layout: default
         margin-right: 2px;
         vertical-align: text-bottom;
     }
-.sender-sub-main { display: table; width: 100%; height: 100%; } 
-.sender-sub-inner { display: table-cell; vertical-align: middle; } 
+	.width {
+	width: 90%;
+	}
 </style>
   </header>
 	  
@@ -96,12 +97,14 @@ layout: default
 			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
                     </div>
                 </div>
-<div class="sender-sub-main"> <div class="sender-sub-inner">
+            <div class="container">
+                <div class="row text-center">
+                    <div class="col-auto mx-auto">
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-input">
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">    
-                            <div class="subscription-form-fields" width="90%" id="subscription-form-fields">
-                              <input name="email" class="email_type" id="email"data-label="E-mail" placeholder="E-mail" required>
+                            <div class="subscription-form-fields"id="subscription-form-fields">
+                              <input name="email" class="email_type width" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
                     </form>
