--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@ layout: default
         vertical-align: text-bottom;
     }
 	.width {
-	width: 90%;
+	width: 550px;
 	}
 </style>
   </header>
@@ -103,7 +103,7 @@ layout: default
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-input">
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">    
-                            <div class="subscription-form-fields"id="subscription-form-fields">
+                            <div class="subscription-form-fields" id="subscription-form-fields">
                               <input name="email" class="email_type width" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
