--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,10 +31,11 @@ layout: default
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
         border-radius: 3px;
-        width: auto;
+        width: 100%;
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         margin-bottom: 0px;
+	margin-top: 15px;
     }
     .subscription-form .checkbox_label {
         display: inline-block;
@@ -94,7 +95,8 @@ layout: default
                     <div class="col-auto mx-auto">
             <h8>Sign up to find out first-hand!</h8>
                <div class="subscription-form-input">
-                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">    
+                    <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
+			    
                               <input name="email" class="email_type" style="width:70%" id="email" data-label="E-mail" placeholder="E-mail" required>
 				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold"></i> </button>
                                   </div>
