--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -75,7 +75,7 @@ layout: default
         margin-right: 2px;
         vertical-align: text-bottom;
     }
-    .subscription-form-input emai {
+    .emai {
 	        border: 1px solid #ccc;
         -webkit-border-radius: 0px 0px 10px 10px;
         -moz-border-radius: 0px 0px 10px 10px;
