--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -77,9 +77,9 @@ layout: default
     }
     .emai {
 	        border: 1px solid #ccc;
-        -webkit-border-radius: 0px 10px 10px 0px;
-        -moz-border-radius: 0px 10px 10px 0px;
-	    border-radius: 0px 10px 10px 0px;
+        -webkit-border-radius: 0 40% 40% 0;
+        -moz-border-radius: 0 40% 40% 0;
+	    border-radius: 0 40% 40% 0;
 	    width:70%
 	}
 </style>
