--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -31,7 +31,7 @@ layout: default
         box-sizing: border-box;
         -moz-box-sizing: border-box;
         margin-bottom: 0px;
-	margin-top: 15px;
+	margin-top: 8px;
     }
     .subscription-form .checkbox_label {
         display: inline-block;
@@ -70,16 +70,16 @@ layout: default
         color: #555;
     }
     .sender-link img {
-        width: 16px;
-        height: 16px;
+        width: 14px;
+        height: 14px;
         margin-right: 2px;
         vertical-align: text-bottom;
     }
     .emai {
 	        border: 1px solid #ccc;
-        -webkit-border-radius: 0 40% 40% 0;
-        -moz-border-radius: 0 40% 40% 0;
-	    border-radius: 0 40% 40% 0;
+        -webkit-border-radius: 1%;
+        -moz-border-radius: 1%;
+	    border-radius: 1%;
 	    width:70%
 	}
 </style>
