--- a/assets/main.css
+++ b/assets/main.css
@@ -2,7 +2,7 @@
 body{
 	background-color:black;
 	font-size:16px;
-	color:#d9692a;
+	color:rgba(217,105,42,0.6);
 	font-family:'Source Sans Pro', serif
 }
 p{
