--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,10 +41,6 @@ layout: default
         font-family: helvetica; 
         color: #d8c580;
     }
-	h8 {
-        color: #FBC403; 
-        font-size: 30px;
-    }
     .subscription-thank-you {
         font-family: helvetica; 
         color: #d8c580; 
@@ -88,7 +84,7 @@ layout: default
             <div class="container">
                 <div class="row text-center">
                     <div class="col-auto mx-auto">
-			<p class="font-weight-bold">What would it be like to walk in the sandals of a Pharaoh?</p>
+			<h4 class="font-weight-bold">What would it be like to walk in the sandals of a Pharaoh?</h4>
                         <p class="text-gold mb-0">You won't know until you unite Egypt — only the rulers of both Upper and Lower Egypt can be called as such, and, as of now, Egypt is shattered! Take the reins of this chariot on its way to the otherworld, restore the order, and build the great pyramid to preserve your legacy! But it's not going to be easy. The priests are breathing down your neck, the enemies are on a war footing, the noblemen are out of line, and, on top of all that, the God's Wife must be chosen swiftly, lest no heir is left to the throne...
 			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
                     </div>
