--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,6 +49,7 @@ layout: default
     .subscription-form-input button {
         padding: 0px; 
         text-align: center;
+	vertical-align: center;
         border: none;
         color: #FBC403; 
         background-color: #000000; 
