--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,7 +76,7 @@ layout: default
         -webkit-border-radius: 3%;
         -moz-border-radius: 3%;
 	    border-radius: 3%;
-	    width:80%
+	    width:100%
 	}
 </style>
   </header>
@@ -97,7 +97,7 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold pt-1 pb-1"></i> </button>
+				 <button type="submit"><i class="fas fa-arrow-circle-right text-gold mt-1"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
                     <a class="sender-link" href="http://sender.net" title="Email marketing services">
