--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,7 +76,7 @@ layout: default
         -webkit-border-radius: 3%;
         -moz-border-radius: 3%;
 	    border-radius: 3%;
-	    width:100%
+	    width:60%
 	}
 </style>
   </header>
@@ -89,8 +89,9 @@ layout: default
 			    </p><p>Can you guide Egyptians through all the hardships to prosperity and power? Will your heart stay pure and uncorrupted so that your soul is granted access to the heavenly realms, to dwell with the gods?</p>
                     </div>
                 </div>
+                </div>
             <div class="container">
-                <div class="row text-center">
+                <div class="row text-center col-auto">
             <h5>Sign up to find out first-hand!</h5>
                <div class="subscription-form-input">
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
