--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -53,6 +53,7 @@ layout: default
         color: #FBC403; 
         background-color: #000000; 
         font-size: 21px; 
+	vertical-align: middle;
     }
     .sender-link-wrapper {
         display: block;
@@ -73,9 +74,9 @@ layout: default
     }
     .emai {
 	        border: 1px solid #ccc;
-        -webkit-border-radius: 3%;
-        -moz-border-radius: 3%;
-	    border-radius: 3%;
+        -webkit-border-radius: 3px;
+        -moz-border-radius: 3px;
+	    border-radius: 3px;
 	    width:60%
 	}
 </style>
