--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -110,7 +110,8 @@ layout: default
 			    </script>                  
                     </div>
                 </div>           
-							 
+			{% include timeline.html %}	
+
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
                         <p class="tag">Visual Novel</p> 
