--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,4 +1,5 @@
-
+<section class="cd-horizontal-timeline">
+	<div class="timeline">
 		<div class="events-wrapper">
 			<div class="events">
 				<ol>
@@ -111,4 +112,5 @@
 				</p>
 			</li>
 		</ol>
-
+	</div> <!-- .events-content -->
+</section>
