--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -1,3 +1,5 @@
+            <div class="container">
+                <div class="row text-center">
 <section class="cd-horizontal-timeline">
 	<div class="timeline">
 		<div class="events-wrapper">
@@ -114,3 +116,5 @@
 		</ol>
 	</div> <!-- .events-content -->
 </section>
+		    </div>
+</div>
