--- a/assets/main.css
+++ b/assets/main.css
@@ -493,7 +493,8 @@ Timeline
   height: 100px;
   width: 100%;
   max-width: 900px;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 }
 .cd-horizontal-timeline .events-wrapper {
   position: relative;
