--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -3,7 +3,7 @@
 		<div class="events-wrapper">
 			<div class="events">
 				<ol>
-					<li><a href="#0" data-date="16/01/2014" class="selected">Jan 2014</a></li>
+					<li><a href="#0" data-date="01/04/2020" class="selected">Apr 2020</a></li>
 					<li><a href="#0" data-date="01/09/2017">Sep 2017</a></li>
 					<li><a href="#0" data-date="01/12/2017">Dec 2017</a></li>
 					<li><a href="#0" data-date="01/03/2018">Mar 2018</a></li>
@@ -23,11 +23,9 @@
 	<div class="events-content">
 		<ol>
 			<li class="selected" data-date="16/01/2014">
-				<h2>An Introduction to Infosec</h2>
-        <em>January, 2017</em>
-				<p>	
-					Back in January, 2017 I began my journey of studies into different areas of infosec to see if it was a challenge I would enjoy and a future prospect for further learning through college.
-				</p>
+				<h2>Pre-Alpha</h2>
+        			<em>April, 2020</em>
+				<p>Story finished</p>
 			</li>
 
 			<li data-date="01/09/2017">
