--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -4,10 +4,10 @@
 			<div class="events">
 				<ol>
 					<li><a href="#0" data-date="01/04/2020" class="selected">Apr 2020</a></li>
-					<li><a href="#0" data-date="01/09/2017">Sep 2017</a></li>
-					<li><a href="#0" data-date="01/12/2017">Dec 2017</a></li>
-					<li><a href="#0" data-date="01/03/2018">Mar 2018</a></li>
-					<li><a href="#0" data-date="01/05/2018">Sep 2018</a></li>
+					<li><a href="#0" data-date="01/05/2020">May 2020</a></li>
+					<li><a href="#0" data-date="01/06/2020">Jun 2020</a></li>
+					<li><a href="#0" data-date="01/09/2020">Winter 2020</a></li>
+					<li><a href="#0" data-date="01/10/2020">Winter 2020</a></li>
 				</ol>
 
 				<span class="filling-line" aria-hidden="true"></span>
@@ -22,40 +22,40 @@
 
 	<div class="events-content">
 		<ol>
-			<li class="selected" data-date="16/01/2014">
+			<li class="selected" data-date="01/04/2020">
 				<h2>Pre-Alpha</h2>
         			<em>April, 2020</em>
 				<p>Story finished</p>
 			</li>
 
-			<li data-date="01/09/2017">
+			<li data-date="01/05/2020">
 				<h2>Fanshawe College Cyber Security</h2>
-				<em>September, 2017</em>
+				<em>May, 2020</em>
 				<p>	
 					In September, 2017 I enrolled into the Cyber Security course at Fanshawe College.
 				</p><br>
         <p>Key courses include: </p>
 			</li>
 
-			<li data-date="01/12/2017">
+			<li data-date="01/06/2020">
 				<h2>CTF</h2>
-				<em>December, 2017</em>
+				<em>June, 2020</em>
 				<p>	
 					Participated in CTF.
 				</p>
 			</li>
 
-			<li data-date="01/03/2018">
+			<li data-date="01/09/2020">
 				<h2>Event title here</h2>
-				<em>01/03/2018</em>
+				<em>Winter, 2020</em>
 				<p>	
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
 				</p>
 			</li>
 			
-			<li data-date="20/05/2018">
+			<li data-date="01/10/2020">
 				<h2>Event title here</h2>
-				<em>May 20th, 2014</em>
+				<em>Winter, 2020</em>
 				<p>	
 					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum praesentium officia, fugit recusandae ipsa, quia velit nulla adipisci? Consequuntur aspernatur at, eaque hic repellendus sit dicta consequatur quae, ut harum ipsam molestias maxime non nisi reiciendis eligendi! Doloremque quia pariatur harum ea amet quibusdam quisquam, quae, temporibus dolores porro doloribus.
 				</p>
