--- a/_includes/timeline.html
+++ b/_includes/timeline.html
@@ -4,9 +4,9 @@
 			<div class="events">
 				<ol>
 					<li><a href="#0" data-date="01/04/2020" class="selected">Apr 2020</a></li>
-					<li><a href="#0" data-date="01/05/2020">May 2020</a></li>
+					<li><a2 href="#0" data-date="01/05/2020">May 2020</a2></li>
 					<li><a href="#0" data-date="01/06/2020">Jun 2020</a></li>
-					<li><a href="#0" data-date="01/09/2020">Winter 2020</a></li>
+					<li><a2 href="#0" data-date="01/09/2020">Winter 2020</a2></li>
 					<li><a href="#0" data-date="01/10/2020">Winter 2020</a></li>
 				</ol>
 
