--- a/assets/main.css
+++ b/assets/main.css
@@ -472,6 +472,9 @@ footer .copyright{
 /* -------------------------------- 
 Timeline
 -------------------------------- */
+	*, *::after, *::before {
+  box-sizing: border-box;
+}
 .cd-horizontal-timeline {
   opacity: 0;
   margin: 2em auto;
@@ -484,7 +487,7 @@ Timeline
   content: 'mobile';
   display: none;
 }
-.cd-horizontal-timeline.loaded {
+.cd-horizontal-timeline .loaded {
   /* show the timeline after events position has been set (using JavaScript) */
   opacity: 1;
 }
