--- a/assets/main.css
+++ b/assets/main.css
@@ -470,17 +470,47 @@ footer .copyright{
 	
 	
 /* -------------------------------- 
-Timeline
+
+Primary style
+
 -------------------------------- */
-	*, *::after, *::before {
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+*, *::after, *::before {
   box-sizing: border-box;
 }
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #383838;
+  background-color: #f8f8f8;
+}
+
+a {
+  color: #7b9d6f;
+  text-decoration: none;
+}
+
+/* -------------------------------- 
+
+Main Components 
+
+-------------------------------- */
 .cd-horizontal-timeline {
   opacity: 0;
   margin: 2em auto;
   -webkit-transition: opacity 0.2s;
   -moz-transition: opacity 0.2s;
   transition: opacity 0.2s;
+}
+.cd-horizontal-timeline::before {
+  /* never visible - this is used in jQuery to check the current MQ */
+  content: 'mobile';
+  display: none;
 }
 .cd-horizontal-timeline.loaded {
   /* show the timeline after events position has been set (using JavaScript) */
@@ -489,8 +519,8 @@ Timeline
 .cd-horizontal-timeline .timeline {
   position: relative;
   height: 100px;
-  width: 100%;
-  max-width: 900px;
+  width: 90%;
+  max-width: 800px;
   margin: 0 auto;
 }
 .cd-horizontal-timeline .events-wrapper {
@@ -510,9 +540,13 @@ Timeline
 }
 .cd-horizontal-timeline .events-wrapper::before {
   left: 0;
+  background-image: -webkit-linear-gradient( left , #f8f8f8, rgba(248, 248, 248, 0));
+  background-image: linear-gradient(to right, #f8f8f8, rgba(248, 248, 248, 0));
 }
 .cd-horizontal-timeline .events-wrapper::after {
   right: 0;
+  background-image: -webkit-linear-gradient( right , #f8f8f8, rgba(248, 248, 248, 0));
+  background-image: linear-gradient(to left, #f8f8f8, rgba(248, 248, 248, 0));
 }
 .cd-horizontal-timeline .events {
   /* this is the grey line/timeline */
@@ -522,7 +556,7 @@ Timeline
   top: 49px;
   height: 2px;
   /* width will be set using JavaScript */
-  background: #fff;
+  background: #dfdfdf;
   -webkit-transition: -webkit-transform 0.4s;
   -moz-transition: -moz-transform 0.4s;
   transition: transform 0.4s;
@@ -535,7 +569,7 @@ Timeline
   top: 0;
   height: 100%;
   width: 100%;
-  background-color: #FF3D7F;
+  background-color: #7b9d6f;
   -webkit-transform: scaleX(0);
   -moz-transform: scaleX(0);
   -ms-transform: scaleX(0);
@@ -552,7 +586,6 @@ Timeline
 }
 .cd-horizontal-timeline .events a {
   position: absolute;
-  width:100px;
   bottom: 0;
   z-index: 2;
   text-align: center;
@@ -565,27 +598,7 @@ Timeline
   -ms-transform: translateZ(0);
   -o-transform: translateZ(0);
   transform: translateZ(0);
-  color:white;
-  padding:5px;
-  margin-bottom:20px;
 }
-	.cd-horizontal-timeline .events a .a2 {
-  bottom: -80px;
-}
-/* custom*/
-.cd-horizontal-timeline .events a::before {
-  content: '';
-  position: absolute;
-  width:1px;
-  height:20px;
-  background: #fff;
-  bottom:-20px;
-  left:50%;
-}
-	.cd-horizontal-timeline .events a .a2::before {
-  bottom:40px;
-}
-
 .cd-horizontal-timeline .events a::after {
   /* this is used to create the event spot */
   content: '';
@@ -597,33 +610,29 @@ Timeline
   -ms-transform: translateX(-50%);
   -o-transform: translateX(-50%);
   transform: translateX(-50%);
-  bottom: -25px;
+  bottom: -5px;
   height: 12px;
   width: 12px;
   border-radius: 50%;
-  border: 2px solid #fff;
-  background-color: #fff;
+  border: 2px solid #dfdfdf;
+  background-color: #f8f8f8;
   -webkit-transition: background-color 0.3s, border-color 0.3s;
   -moz-transition: background-color 0.3s, border-color 0.3s;
   transition: background-color 0.3s, border-color 0.3s;
 }
-	.cd-horizontal-timeline .events a .a2::after {
-	  bottom: 55px;
-	}
-	
 .no-touch .cd-horizontal-timeline .events a:hover::after {
-  background-color: #FF3D7F;
-  border-color: #fff;
+  background-color: #7b9d6f;
+  border-color: #7b9d6f;
 }
 .cd-horizontal-timeline .events a.selected {
   pointer-events: none;
 }
 .cd-horizontal-timeline .events a.selected::after {
-  background-color: #FF3D7F;
-  border-color: #FF3D7F;
+  background-color: #7b9d6f;
+  border-color: #7b9d6f;
 }
 .cd-horizontal-timeline .events a.older-event::after {
-  border-color: #FF3D7F;
+  border-color: #7b9d6f;
 }
 @media only screen and (min-width: 1100px) {
   .cd-horizontal-timeline {
@@ -646,10 +655,10 @@ Timeline
   -ms-transform: translateY(-50%);
   -o-transform: translateY(-50%);
   transform: translateY(-50%);
-  height: 30px;
-  width: 30px;
+  height: 34px;
+  width: 34px;
   border-radius: 50%;
-  border: 2px solid #fff;
+  border: 2px solid #dfdfdf;
   /* replace text with an icon */
   overflow: hidden;
   color: transparent;
@@ -674,7 +683,7 @@ Timeline
   -ms-transform: translateX(-50%) translateY(-50%);
   -o-transform: translateX(-50%) translateY(-50%);
   transform: translateX(-50%) translateY(-50%);
-  background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHhtbG5zOnhsaW5rPSJodHRw%0D%0AOi8vd3d3LnczLm9yZy8xOTk5L3hsaW5rIiB4PSIwcHgiIHk9IjBweCIgd2lkdGg9IjE2cHgiIGhl%0D%0AaWdodD0iMzJweCIgdmlld0JveD0iMCAwIDE2IDMyIj48ZyAgdHJhbnNmb3JtPSJ0cmFuc2xhdGUo%0D%0AMCwgMCkiPjxwb2x5Z29uIGZpbGw9IiM3YjlkNmYiIHBvaW50cz0iNiwxMy40IDQuNiwxMiA4LjYs%0D%0AOCA0LjYsNCA2LDIuNiAxMS40LDggIi8+PC9nPjxnICB0cmFuc2Zvcm09InRyYW5zbGF0ZSgwLCAx%0D%0ANikiPjxwb2x5Z29uIGZpbGw9IiNkZmRmZGYiIHBvaW50cz0iNiwxMy40IDQuNiwxMiA4LjYsOCA0%0D%0ALjYsNCA2LDIuNiAxMS40LDggIi8+PC9nPjwvc3ZnPg==) no-repeat 0 0;
+  background: url(../img/cd-arrow.svg) no-repeat 0 0;
 }
 .cd-timeline-navigation a.prev {
   left: 0;
@@ -686,10 +695,9 @@ Timeline
 }
 .cd-timeline-navigation a.next {
   right: 0;
-  color: #fff;
 }
 .no-touch .cd-timeline-navigation a:hover {
-  border-color: #FF3D7F;
+  border-color: #7b9d6f;
 }
 .cd-timeline-navigation a.inactive {
   cursor: not-allowed;
@@ -698,7 +706,7 @@ Timeline
   background-position: 0 -16px;
 }
 .no-touch .cd-timeline-navigation a.inactive:hover {
-  border-color: #FF3D7F;
+  border-color: #dfdfdf;
 }
 
 .cd-horizontal-timeline .events-content {
@@ -762,7 +770,8 @@ Timeline
 }
 .cd-horizontal-timeline .events-content h2 {
   font-weight: bold;
-  font-size: 3em !important;
+  font-size: 2.6rem;
+  font-family: "Playfair Display", serif;
   font-weight: 700;
   line-height: 1.2;
 }
@@ -775,8 +784,8 @@ Timeline
   content: '- ';
 }
 .cd-horizontal-timeline .events-content p {
-  font-size: 1.5em !important;
-  color: #fff;
+  font-size: 1.4rem;
+  color: #959595;
 }
 .cd-horizontal-timeline .events-content em, .cd-horizontal-timeline .events-content p {
   line-height: 1.6;
@@ -786,7 +795,7 @@ Timeline
     font-size: 7rem;
   }
   .cd-horizontal-timeline .events-content em {
-    font-size: 1.5em !important;
+    font-size: 2rem;
   }
   .cd-horizontal-timeline .events-content p {
     font-size: 1.8rem;
