--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,12 +12,12 @@
           {% if page.url == "/about.html" or page.url == "/press-kit.html" %}
           <a class="nav-link" href="{{"/index" | relative_url }}">Home</a>
           {% else %}
-          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          <a class="nav-link" href="{{"/about" | relative_url }}">FAQ</a>
           {% endif %}
         </li>
         <li class="nav-item">
           {% if page.url == "/press-kit.html" %}
-          <a class="nav-link" href="{{"/about" | relative_url }}">About</a>
+          <a class="nav-link" href="{{"/about" | relative_url }}">FAQ</a>
           {% else %}
           <a class="nav-link" href="{{"/press-kit" | relative_url }}">Press-Kit</a>
           {% endif %}
