--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,6 +6,7 @@
       Menu
       <i class="fas fa-bars"></i>
     </button>
+    <button onclick="topFunction()" id="topbutton" title="Go back to the top"><i class="fas fa-chevron-circle-up"></i></button>
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto mr-auto">
         <li class="nav-item">
