--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <!-- Footer -->
 
+    <button onclick="topFunction()" id="topbutton" title="Go back to the top"><i class="fas fa-chevron-circle-up"></i></button>
+
 <hr>
 
 <footer>
