--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -90,6 +90,7 @@ layout: default
                     </div>
                 </div>
                 </div>
+	  
             <div class="container">
                 <div class="row text-center col-auto">
                <div class="subscription-form-input">
@@ -122,7 +123,6 @@ layout: default
                         <p class="tag">Political Simulator</p> 
                     </div>                     
                 </div>                 
-            </div>
 
   <div class="container">
                 <div class="row"> 
@@ -142,8 +142,7 @@ layout: default
                                 <i class="fas fa-redo-alt bigicon pt-3 pb-3"></i>
                                 <h4 class="text-uppercase medium m-3 text-gold">HIGH REPLAYABILITY</h4> 
                                 <hr class="my-3" color="#FBC403"> 
-                                <div class="small text-gold">Flexible interactive narrative with hundreds of choices and multiple different outcomes; see how your rulership stacks up against other players and the expectations of Osiris!
-                                </div>                                 
+                                <div class="small text-gold">Flexible interactive narrative with hundreds of choices and multiple different outcomes; see how your rulership stacks up against other players and the expectations of Osiris!</div>                                 
                             </div>                             
                         </div>                         
                     </div>      
@@ -153,13 +152,12 @@ layout: default
                                 <i class="fas fa-capsules bigicon pt-3 pb-3"></i> 
                                 <h4 class="text-uppercase medium m-3 text-gold">BORDERLINE ADDICTIVE</h4> 
                                 <hr class="my-3" color="#FBC403"> 
-                                <div class="small text-gold">Find yourself starting over and over again as you look for new approaches to governance that would not lead you to traps, noblemen plotting against you, or to the crossroads of equally unfavorable alternatives. 
-                                    <br> 
-                                </div>                                 
+                                <div class="small text-gold">Find yourself starting over and over again as you look for new approaches to governance that would not lead you to traps, noblemen plotting against you, or to the crossroads of equally unfavorable alternatives.</div>                                 
                             </div>                             
                         </div>                         
                     </div>                     
-  
+	  	</div>
+	</div>
            
 <div class="container">
     <div class="row">
