--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -5,6 +5,8 @@
 <script src="{{"/assets/timeline.js" | relative_url }}"></script>
 <script src="{{"/assets/scripts.js" | relative_url }}"></script>
 
+<script src="{{"/assets/faq.js" | relative_url }}"></script>
+
 <script>
   mybutton = document.getElementById("topbutton");
 // When the user scrolls down 20px from the top of the document, show the button
