--- a/assets/main.css
+++ b/assets/main.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Abel|Dosis|Source+Code+Pro|Roboto+Slab:100|Source+Code+Pro|Source+Sans+Pro:200|Unica+One|Josefin+Sans:300|Nothing+You+Could+Do|Gelasio");
 body{
-	background-color:black;
+	background-color:#FFC071;
 	font-size:16px;
-	color:#FFC071;
+	color:#FBC403;
 	font-family:'Source Sans Pro', serif
 }
 p{
