--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Abel|Dosis|Source+Code+Pro|Roboto+Slab:100|Source+Code+Pro|Source+Sans+Pro:200|Unica+One|Josefin+Sans:300|Nothing+You+Could+Do|Gelasio");
 body{
-	background-color:#FFC071;
+	background-color:#fff3a1;
 	font-size:16px;
 	color:#Fff;
 	font-family:'Source Sans Pro', serif
