--- a/assets/main.css
+++ b/assets/main.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Abel|Dosis|Source+Code+Pro|Roboto+Slab:100|Source+Code+Pro|Source+Sans+Pro:200|Unica+One|Josefin+Sans:300|Nothing+You+Could+Do|Gelasio");
 body{
-	background-color:#FFF4C8;
+	background-color:rgba(255, 227, 194, 1);
 	font-size:16px;
 	color:#000;
 	font-family:'Source Sans Pro', serif
