--- a/assets/main.css
+++ b/assets/main.css
@@ -517,8 +517,8 @@ footer .copyright{
   border-bottom: 1px solid #ff5353;
 }
 .accordion a::after {
-  font-family: 'Ionicons';
-  content: '\f218';
+  font-family: 'Font Awesome\ 5 Free';
+  content: '\f13a';
   position: absolute;
   float: right;
   right: 1rem;
@@ -534,8 +534,8 @@ footer .copyright{
   text-align: center;
 }
 .accordion a.active::after {
-  font-family: 'Ionicons';
-  content: '\f209';
+  font-family: 'Font Awesome\ 5 Free';
+  content: '\f13a';
   color: #ff5353;
   border: 1px solid #ff5353;
 }
