--- a/assets/main.css
+++ b/assets/main.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Abel|Dosis|Source+Code+Pro|Roboto+Slab:100|Source+Code+Pro|Source+Sans+Pro:200|Unica+One|Josefin+Sans:300|Nothing+You+Could+Do|Gelasio");
+@import "font-awesome";
+
 body{
 	background-color:#2c2c2c;
 	font-size:16px;
