--- a/assets/main.css
+++ b/assets/main.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Abel|Dosis|Source+Code+Pro|Roboto+Slab:100|Source+Code+Pro|Source+Sans+Pro:200|Unica+One|Josefin+Sans:300|Nothing+You+Could+Do|Gelasio");
-@import "font-awesome";
+@import url("https://use.fontawesome.com/releases/v5.4.2/css/all.css");
 
 body{
 	background-color:#2c2c2c;
