--- a/assets/main.css
+++ b/assets/main.css
@@ -519,8 +519,8 @@ footer .copyright{
   border-bottom: 1px solid #fdb245;
 }
 .accordion a::after {
-  font-family: 'Font Awesome 5 Free';
-  content: '\f139';
+  font-family: "Font Awesome 5 Free";
+  content: "\f139";
   position: absolute;
   float: right;
   right: 1rem;
@@ -534,12 +534,14 @@ footer .copyright{
   border-radius: 50%;
   border: 1px solid #7288a2;
   text-align: center;
+	font-weight: 900; 
 }
 .accordion a.active::after {
-  font-family: 'Font Awesome 5 Free';
-  content: '\f139';
+  font-family: "Font Awesome 5 Free";
+  content: "\f139"
   color: #ff5353;
   border: 1px solid #fdb245;
+	font-weight: 900; 
 }
 .accordion .content {
   opacity: 0;
