--- a/assets/main.css
+++ b/assets/main.css
@@ -12,7 +12,8 @@ p{
 	margin:30px 0
 }
 p a{
-	text-decoration:underline
+	text-decoration:none;
+	font-color:#fdb245;
 }
 h1,h2,h3,h4,h5,h6{
 	font-weight:800;
@@ -521,7 +522,7 @@ footer .copyright{
 .accordion a::after {
   font-family: "Font Awesome 5 Free";
   content: "\f077";
-  position: relative;
+  position: absolute;
   float: right;
   right: 1rem;
   font-size: 1rem;
@@ -533,7 +534,8 @@ footer .copyright{
   border-radius: 50%;
   border: 1px solid #7288a2;
   text-align: center;
-	font-weight: 900; 
+  vertical-align: middle;
+ font-weight: 900; 
 }
 .accordion a.active::after {
   font-family: "Font Awesome 5 Free";
