--- a/assets/main.css
+++ b/assets/main.css
@@ -489,7 +489,7 @@ footer .copyright{
 }
 
 
-	.accordion a {
+	.accordion q {
   position: relative;
   display: -webkit-box;
   display: -webkit-flex;
@@ -507,19 +507,19 @@ footer .copyright{
   font-weight: 400;
   border-bottom: 1px solid #e5e5e5;
 }
-.accordion a:hover,
-.accordion a:hover::after {
+.accordion q:hover,
+.accordion q:hover::after {
   cursor: pointer;
   color: #fdb245;
 }
-.accordion a:hover::after {
+.accordion q:hover::after {
   border: 1px solid #fdb245;
 }
-.accordion a.active {
+.accordion q.active {
   color: #fdb245;
   border-bottom: 1px solid #fdb245;
 }
-.accordion a::after {
+.accordion q::after {
   font-family: "Font Awesome 5 Free";
   content: "\f077";
   position: absolute;
@@ -537,7 +537,7 @@ footer .copyright{
   vertical-align: middle;
  font-weight: 900; 
 }
-.accordion a.active::after {
+.accordion q.active::after {
   font-family: "Font Awesome 5 Free";
   content: "\f139"
   color: #ff5353;
