--- a/assets/main.css
+++ b/assets/main.css
@@ -20,7 +20,7 @@ h1,h2,h3,h4,h5,h6{
 	font-family:'Source Sans Pro', sans-serif
 }
 a{
-	color:#212529;
+	color:#fdb245;
 	-webkit-transition:all 0.2s;
 	-moz-transition:all 0.2s;
 	transition:all 0.2s
