--- a/assets/main.css
+++ b/assets/main.css
@@ -507,9 +507,6 @@ footer .copyright{
   font-weight: 400;
   border-bottom: 1px solid #e5e5e5;
 }
-	.accordion a .inherit {
-	all:inherit;
-	}
 .accordion a:hover:not(.inherit),
 .accordion a:hover:not(.inherit)::after {
   cursor: pointer;
@@ -569,4 +566,5 @@ footer .copyright{
   -webkit-transition: all 0.35s ease 0.15s;
   -o-transition: all 0.35s ease 0.15s;
   transition: all 0.35s ease 0.15s;
+	border-bottom: #fdb245;
 }
