--- a/assets/main.css
+++ b/assets/main.css
@@ -534,7 +534,7 @@ footer .copyright{
   border-radius: 50%;
   border: 1px solid #7288a2;
   text-align: center;
-  vertical-align: middle;
+  vertical-align: bottom;
  font-weight: 900; 
 }
 .accordion a.active:not(.inherit)::after {
