--- a/assets/main.css
+++ b/assets/main.css
@@ -535,9 +535,9 @@ footer .copyright{
   border-radius: 50%;
   border: 1px solid #7288a2;
   text-align: center;
-  vertical-align: bottom;
  font-weight: 900; 
   margin: auto; /* Important */ 
+padding-top: 1px;
 }
 .accordion a.active:not(.inherit)::after {
   font-family: "Font Awesome 5 Free";
