--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,18 +21,16 @@
           <li class="list-inline-item">
             <a href="https://www.reddit.com/r/{{ site.subreddit }}">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-reddit-alien fa-stack-1x fa-inverse"></i>
+                <i class="fab fa-reddit-square fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
           {% endif %}
-          {% if site.github_username %}
+          {% if site.discord_invite %}
           <li class="list-inline-item">
-            <a href="https://github.com/{{ site.github_username }}">
+            <a href="{{ site.discord_invite }}">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                <i class="fab fa-discord fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
