--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,6 +21,7 @@
           <li class="list-inline-item">
             <a href="https://www.reddit.com/r/{{ site.subreddit }}">
               <span class="fa-stack fa-lg">
+                                <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-reddit-square fa-stack-1x fa-inverse"></i>
               </span>
             </a>
@@ -30,6 +31,7 @@
           <li class="list-inline-item">
             <a href="{{ site.discord_invite }}">
               <span class="fa-stack fa-lg">
+                                <i class="fas fa-circle fa-stack-2x"></i>
                 <i class="fab fa-discord fa-stack-1x fa-inverse"></i>
               </span>
             </a>
