--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,7 @@
             <a href="https://www.twitter.com/{{ site.twitter_username }}">
               <span class="fa-stack fa-lg">
                 <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                <i class="fab fa-twitter fa-stack-1x fa-inverse text-h0"></i>
               </span>
             </a>
           </li>
@@ -21,7 +21,7 @@
           <li class="list-inline-item">
             <a href="https://www.reddit.com/r/{{ site.subreddit }}">
               <span class="fa-stack fa-lg">
-                <i class="fab fa-reddit-square fa-stack-2x fa-inverse"></i>
+                <i class="fab fa-reddit-square fa-stack-2x fa-inverse text-h0"></i>
               </span>
             </a>
           </li>
@@ -30,7 +30,7 @@
           <li class="list-inline-item">
             <a href="{{ site.discord_invite }}">
               <span class="fa-stack fa-lg">
-                <i class="fab fa-discord fa-stack-2x fa-inverse"></i>
+                <i class="fab fa-discord fa-stack-2x fa-inverse text-h0"></i>
               </span>
             </a>
           </li>
