--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
           <li class="list-inline-item">
             <a href="https://www.reddit.com/r/{{ site.subreddit }}">
               <span class="fa-stack fa-lg">
-                <i class="fab fa-reddit-square fa-stack-2x text-h0"></i>
+                <i class="fab fa-reddit-square fa-stack-2x text-h0" style="font-color:#FF4301"></i>
               </span>
             </a>
           </li>
