--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
           <li class="list-inline-item">
             <a href="https://www.reddit.com/r/{{ site.subreddit }}">
               <span class="fa-stack fa-lg">
-                <i class="fab fa-reddit-square fa-stack-2x text-h0" style="font-color:#FF4301"></i>
+                <i class="fab fa-reddit-square fa-stack-2x text-h0" style="color:#FF4301"></i>
               </span>
             </a>
           </li>
@@ -30,7 +30,7 @@
           <li class="list-inline-item">
             <a href="{{ site.discord_invite }}">
               <span class="fa-stack fa-lg">
-                <i class="fab fa-discord fa-stack-2x text-h0" style="vertical-align:text-top;"></i>
+                <i class="fab fa-discord fa-stack-2x text-h0" style="vertical-align:middle;"></i>
               </span>
             </a>
           </li>
