--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
           <li class="list-inline-item">
             <a href="{{ site.discord_invite }}">
               <span class="fa-stack fa-lg">
-                <i class="fab fa-discord fa-stack-2x text-h0" style="vertical-align:sub;"></i>
+                <i class="fab fa-discord fa-stack-2x text-h0" style="vertical-align:-5%;"></i>
               </span>
             </a>
           </li>
