--- a/assets/main.css
+++ b/assets/main.css
@@ -444,7 +444,7 @@ footer .list-inline{
 footer .copyright{
 	font-size:14px;
 	margin-bottom:0;
-	text-align:center
+	text-align:center !important;
 }
 .btn{
 	font-size:14px;
