--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -97,7 +97,7 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-arrow-circle-right smallicon"></i> </button>
+				 <button type="submit"><i class="fas fa-arrow-circle-right smallicon text-h0"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
                     <a class="sender-link" href="http://sender.net" title="Email marketing services">
@@ -109,6 +109,18 @@ layout: default
     </div>
 </div>                     
 
+	    <div class="container">
+                <div class="row"> 
+                    <div class="col-md-2 mb-2 mb-md-3"> 
+                          <div class="card py-1 h-25"> 
+                             <div class="card-body text-center"> 
+                                <i class="fas fa-book bigicon pt-3 pb-3"></i> 
+                            </div>                             
+                        </div>                         
+                    </div>
+			                        </div>                         
+                    </div>
+			
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
                         <p class="tag">Visual Novel</p> 
