--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -109,21 +109,11 @@ layout: default
     </div>
 </div>                     
 
-	    <div class="container">
-                <div class="row"> 
-                    <div class="col-md-2 mb-2 mb-md-3"> 
-                          <div class="card py-1 h-25"> 
-                             <div class="card-body text-center"> 
-                                <i class="fas fa-book bigicon pt-3 pb-3"></i> 
-                            </div>                             
-                        </div>                         
-                    </div>
-			                        </div>                         
-                    </div>
 			
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
-                        <p class="tag">Visual Novel</p> 
+                                <i class="fas fa-book bigicon pt-3 pb-3"></i> 
+			    <p class="tag">Strategy</p> 
                     </div>                     
                     <div class="col"> 
                         <p class="tag">Strategy</p> 
