--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,7 +71,6 @@ layout: default
         vertical-align: text-bottom;
     }
     .emai {
-	        border: 1px solid #ccc;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
 	    border-radius: 3px;
@@ -97,7 +96,7 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-arrow-circle-right text-h0"></i> </button>
+				 <button type="submit"><i class="fas fa-arrow-circle-right text-h0 smallicon"></i> </button>
                     </form>
                                 <span class="sender-link-wrapper">
                     <a class="sender-link" href="http://sender.net" title="Email marketing services">
