--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,6 +71,7 @@ layout: default
         vertical-align: text-bottom;
     }
     .emai {
+	    border: 1px solid #fdb245;
         -webkit-border-radius: 3px;
         -moz-border-radius: 3px;
 	    border-radius: 3px;
@@ -107,7 +108,7 @@ layout: default
                                     </div>
     </div>
 </div>                     
-
+<i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
 			
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
