--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,18 +39,17 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-arrow-circle-right text-h0 smallicon"></i> </button>
+				 <button type="submit"><i class="fas fa-arrow-circle-right text-h0 smallicon"></i> </button><i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
                     </form>
-                                <span class="sender-link-wrapper">
+                                <span class="sender-link-wrapper"><i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
                     <a class="sender-link" href="http://sender.net" title="Email marketing services">
                         <img src="https://app.sender.net/favicon.png">
-                        <span>Sender.net email marketing</span>
+                        <span>Sender.net email marketing</span><i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
                     </a>
                 </span>
                                     </div>
     </div>
 </div>                     
-<i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
 			
                 <div class="row no-gutter mt-4 col-lg-8 mx-auto"> 
                     <div class="col"> 
