--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -39,12 +39,12 @@ layout: default
                     <form id="sender-subscribe" action="https://app.sender.net/forms/sender_subscription/2812/86ed8624" method="POST">  
 			    
                               <input name="email" class="email_type emai" id="email" data-label="E-mail" placeholder="E-mail" required>
-				 <button type="submit"><i class="fas fa-arrow-circle-right text-h0 smallicon"></i> </button><i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
+				 <button type="submit"><i class="fas fa-arrow-circle-right text-h0"></i> </button>
                     </form>
-                                <span class="sender-link-wrapper"><i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
+                                <span class="sender-link-wrapper">
                     <a class="sender-link" href="http://sender.net" title="Email marketing services">
                         <img src="https://app.sender.net/favicon.png">
-                        <span>Sender.net email marketing</span><i class="fas fa-arrow-circle-right text-h0 smallicon"></i>
+                        <span>Sender.net email marketing</span>
                     </a>
                 </span>
                                     </div>
