--- a/assets/main.css
+++ b/assets/main.css
@@ -639,5 +639,5 @@ padding-top: 2px;
 	    border-radius: 3px;
 	    width:60%;
 		    background-color:#fdb245;
-	    font-color: #fff;
+	    color: #fff;
 	}
