--- a/assets/main.css
+++ b/assets/main.css
@@ -613,7 +613,7 @@ padding-top: 2px;
 	vertical-align: middle;
     width: 22px;	
   background-color: transparent;
-	    margin-bottom: 2%;
+	    margin-bottom: 2px;
     }
     .sender-link-wrapper {
         display: block;
