--- a/assets/main.css
+++ b/assets/main.css
@@ -613,7 +613,8 @@ padding-top: 2px;
 	vertical-align: middle;
     width: 22px;	
   background-color: transparent;
-	    margin-bottom: 2px;
+	    padding-bottom: 3px;
+	    padding-left:-3%;
     }
     .sender-link-wrapper {
         display: block;
