--- a/assets/main.css
+++ b/assets/main.css
@@ -585,7 +585,7 @@ padding-top: 2px;
         padding: 4px;
         font-size: 15px;
         line-height: 20px;
-        color: #fff;
+        color: #000000;
 	font-weight: bold;
         width: 100%;
         box-sizing: border-box;
@@ -599,7 +599,7 @@ padding-top: 2px;
         margin-left: 4px;
         font-size: 16px;
         font-family: helvetica; 
-        color: #fff;
+        color: #000000;
     }
     .subscription-thank-you {
         font-family: helvetica; 
