--- a/assets/main.css
+++ b/assets/main.css
@@ -600,6 +600,7 @@ padding-top: 2px;
         font-size: 16px;
         font-family: helvetica; 
         color: #000000;
+	    font-weight: bold;
     }
     .subscription-thank-you {
         font-family: helvetica; 
@@ -641,5 +642,6 @@ padding-top: 2px;
 	    border-radius: 3px;
 	    width:60%;
 		    background-color:#fdb245;
-	    color: #fff;
+        color: #000000;
+	    font-weight: bold;
 	}
