--- a/assets/main.css
+++ b/assets/main.css
@@ -617,7 +617,7 @@ padding-top: 2px;
   background-color: transparent;
 	    padding-bottom: 3px;
 	    padding-left:-50%;
-	    border: 2px solid #000;
+text-shadow: 0 0 3px #000;
     }
     .sender-link-wrapper {
         display: block;
