--- a/assets/main.css
+++ b/assets/main.css
@@ -402,7 +402,7 @@ blockquote>p::before{
 	font-family:'Source Sans Pro', serif
 }
 .floating-label-form-group input::-webkit-input-placeholder,.floating-label-form-group textarea::-webkit-input-placeholder{
-	color:#868e96;
+	color:#000000;
 	font-family:'Source Sans Pro', serif
 }
 .floating-label-form-group label{
@@ -419,7 +419,8 @@ blockquote>p::before{
 	transition:top 0.3s ease, opacity 0.3s ease;
 	vertical-align:middle;
 	vertical-align:baseline;
-	opacity:0
+	opacity:0;
+	padding-left:5px;
 }
 .floating-label-form-group .help-block{
 	margin:15px 0
