--- a/assets/main.css
+++ b/assets/main.css
@@ -618,6 +618,7 @@ padding-top: 2px;
   background-color: transparent;
 	    padding-bottom: 3px;
 	    padding-left: -3px;
+	    text-shadow: -3px 0 #000, 0 3px #000, 3px 0 #000, 0 -3px #000;
     }
     .sender-link-wrapper {
         display: block;
