--- a/assets/main.css
+++ b/assets/main.css
@@ -613,6 +613,7 @@ padding-top: 2px;
         text-align: center;
         border: none;
 	font-size: 22px;
+	font-color: #fdb245;
 	vertical-align: middle;
     width: 22px;	
   background-color: transparent;
