--- a/assets/main.css
+++ b/assets/main.css
@@ -613,7 +613,7 @@ padding-top: 2px;
         text-align: center;
         border: none;
 	font-size: 22px;
-	font-color: #fdb245;
+	color: #fdb245;
 	vertical-align: middle;
     width: 22px;	
   background-color: transparent;
@@ -622,7 +622,7 @@ padding-top: 2px;
 	    text-shadow: -3px 0 #000, 0 3px #000, 3px 0 #000, 0 -3px #000;
     }
 	    .subscription-form-input button:hover {
-        font-color: #fff;
+        color: #fff;
     }
     .sender-link-wrapper {
         display: block;
