--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,12 +7,11 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
-          {% if site.twitter_username %}
+          {% if site.steam_creator_page %}
           <li class="list-inline-item">
-            <a href="https://www.twitter.com/{{ site.twitter_username }}">
+            <a href="{{ site.steam_creator_page }}">
               <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse text-h0"></i>
+                <i class="fab fa-steam-square fa-stack-2x" title="Steam Creator Page"></i>
               </span>
             </a>
           </li>
@@ -31,6 +30,15 @@
             <a href="{{ site.discord_invite }}">
               <span class="fa-stack fa-lg">
                 <i class="fab fa-discord fa-stack-2x" title="Join the Discord server"></i>
+              </span>
+            </a>
+          </li>
+          {% endif %}
+          {% if site.youtube %}
+          <li class="list-inline-item">
+            <a href="{{ site.youtube }}">
+              <span class="fa-stack fa-lg">
+                <i class="fab fa-youtube-square fa-stack-2x" title="Subscribe to the YouTube channel"></i>
               </span>
             </a>
           </li>
