--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -44,7 +44,7 @@
           </li>
           {% endif %}
         </ul>
-        <p class="copyright text-muted">Copyright &copy; {{ site.author }}, {{ 'now' | date: "%Y" }}</p>
+        <p class="copyright text-muted"><i class="far fa-envelope"></i><a href="mailto:{{ e-mail }}">{{ e-mail }}</a><br>Copyright &copy; {{ site.author }}, {{ 'now' | date: "%Y" }}</p>
       </div>
     </div>
   </div>
